BusOne/src/objects/Consent_Header_vod__c.object
<CustomObject>
    <description>Consent Header defines the country and the language for which the consent capture functionality is available for</description>
    <fields>
        <fullName>Approved_Email_Consent_Level_vod__c</fullName>
        <description>Picklist value that defines the level of consent for Approved Email when capturing and determining consent.</description>
        <label>Approved Email Consent Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product_vod</fullName>
                </value>
                <value>
                    <fullName>Content_Type_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Consent_Header_Help_Text_vod__c</fullName>
        <description>Field where content admin can add text that helps User better understand how to use consent capture page.</description>
        <label>Consent Header Help Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The country for which the consent header is applicable.</description>
        <label>Country</label>
        <referenceTo>Country_vod__c</referenceTo>
        <relationshipLabel>Consent Headers</relationshipLabel>
        <relationshipName>Consent_Header_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Inactive_Datetime_vod__c</fullName>
        <description>The datetime whenever the status is changed to Inactive_vod.</description>
        <label>Inactive Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Language_vod__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ar</fullName>
                </value>
                <value>
                    <fullName>bg</fullName>
                </value>
                <value>
                    <fullName>zh_CN</fullName>
                </value>
                <value>
                    <fullName>zh_TW</fullName>
                </value>
                <value>
                    <fullName>hr</fullName>
                </value>
                <value>
                    <fullName>cs</fullName>
                </value>
                <value>
                    <fullName>da</fullName>
                </value>
                <value>
                    <fullName>nl_NL</fullName>
                </value>
                <value>
                    <fullName>en_US</fullName>
                </value>
                <value>
                    <fullName>en_GB</fullName>
                </value>
                <value>
                    <fullName>fi</fullName>
                </value>
                <value>
                    <fullName>fr</fullName>
                </value>
                <value>
                    <fullName>de</fullName>
                </value>
                <value>
                    <fullName>el</fullName>
                </value>
                <value>
                    <fullName>iw</fullName>
                </value>
                <value>
                    <fullName>hu</fullName>
                </value>
                <value>
                    <fullName>in</fullName>
                </value>
                <value>
                    <fullName>it</fullName>
                </value>
                <value>
                    <fullName>ja</fullName>
                </value>
                <value>
                    <fullName>ko</fullName>
                </value>
                <value>
                    <fullName>no</fullName>
                </value>
                <value>
                    <fullName>pl</fullName>
                </value>
                <value>
                    <fullName>pt_BR</fullName>
                </value>
                <value>
                    <fullName>pt_PT</fullName>
                </value>
                <value>
                    <fullName>ro</fullName>
                </value>
                <value>
                    <fullName>ru</fullName>
                </value>
                <value>
                    <fullName>sk</fullName>
                </value>
                <value>
                    <fullName>sl</fullName>
                </value>
                <value>
                    <fullName>es</fullName>
                </value>
                <value>
                    <fullName>es_MX</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reject_Channel_Source_Edit_On_Cancel_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If set to true, the any changes made to channel source will be written to the database only if consent is captured for that channel source, otherwise the changes made will be cancelled.</description>
        <label>Reject Channel Source Edit On Cancel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request_Receipt_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When placed on Consent Header page layout, user can request receipt.</description>
        <label>Request Receipt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Signature_Required_On_Opt_Out_vod__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Flag used to determine if Signature/ Paper Consent ID is required if only opt outs are being captured</description>
        <label>Signature Required On Opt-Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status_vod__c</fullName>
        <description>The status of the consent header.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active_vod</fullName>
                </value>
                <value>
                    <fullName>Inactive_vod</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Staged_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subscription_Option_vod__c</fullName>
        <description>Field that drives the visibility of Subscribe/Unsubscribe All buttons. If the value is set to -
                    0 - Display Subscribe/Unsubscribe All Buttons
                    1 - Hide Subscribe/Unsubscribe All Buttons</description>
        <label>Subscription Option</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Consent Header</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Country_vod__c</columns>
        <columns>Language_vod__c</columns>
        <columns>Status_vod__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Consent Headers</pluralLabel>
    <recordTypes>
        <fullName>Consent_Header_Default_vod</fullName>
        <active>true</active>
        <description>Default recordtype for Consent_Header_vod object.</description>
        <label>Consent_Header_Default_vod</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>